k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
       - name: server
         image: pradsi/multi-server
         resources:
          limits:
            memory: "64Mi"
            cpu: "100m"
         ports:
            - containerPort: 5000
